临时修改配置文件

--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -4,6 +4,6 @@
 #jdbc.password=root
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://47.94.192.2:3306/sourcedata
+jdbc.url=jdbc:mysql://44.97.192.2:3306/sourcedata
 jdbc.username=root
-jdbc.password=root
+jdbc.password=root123
